--- a/composer.json
+++ b/composer.json
@@ -106,12 +106,14 @@
         "lightsaml/sp-bundle": "~1.0.3",
         "symfony/expression-language": "~2.8",
         "egeloen/ordered-form-bundle": "^3.0",
+        "guzzlehttp/psr7": "^1.4",
         "symfony/dotenv": "^3.3",
         "php-amqplib/rabbitmq-bundle": "^1.10",
         "leezy/pheanstalk-bundle": "^3.2",
         "simshaun/recurr": "^3.0",
         "ramsey/uuid": "^3.7",
         "sendgrid/sendgrid": "~6.0",
+        "bandwidth-throttle/token-bucket": "^2.0",
         "noxlogic/ratelimit-bundle": "^1.11"
     },
     "require-dev": {
