--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,7 @@
         "jms/serializer-bundle": "~1.1",
         "oneup/uploader-bundle": "~1.3",
 
+        "tightenco/collect": "^5.6",
         "phpoffice/phpexcel": "1.8.1",
         "joomla/http": "1.2.*",
         "joomla/filter": "1.2.*",
