--- a/composer.json
+++ b/composer.json
@@ -107,6 +107,8 @@
         "symfony/expression-language": "~2.8",
         "egeloen/ordered-form-bundle": "^3.0",
         "symfony/dotenv": "^3.3",
+        "enqueue/enqueue-bundle": "~0.8",
+        "enqueue/fs": "~0.8",
         "php-amqplib/rabbitmq-bundle": "^1.10",
         "leezy/pheanstalk-bundle": "^3.2",
         "simshaun/recurr": "^3.0",
