[convert2codeception] working commit

--- a/app/bundles/CoreBundle/codeception.yml
+++ b/app/bundles/CoreBundle/codeception.yml
@@ -5,6 +5,7 @@ paths:
     data: Tests/_data
     support: Tests/_support
     envs: Tests/_envs
-params:
-    - ../../../.env.dist
-
+actor_suffix: Tester
+extensions:
+    enabled:
+        - Codeception\Extension\RunFailed
