--- a/app/bundles/LeadBundle/Tests/functional.suite.yml
+++ b/app/bundles/LeadBundle/Tests/functional.suite.yml
@@ -1,4 +1,9 @@
 actor: FunctionalTester
 modules:
     enabled:
+        - Symfony:
+              app_path: '../../../app'
+              var_path: '../../../app'
+        - Doctrine2:
+              depends: Symfony
         - \Mautic\LeadBundle\Helper\Functional
