Adding Datescan Composer Package

--- a/composer.json
+++ b/composer.json
@@ -113,7 +113,8 @@
         "ramsey/uuid": "^3.7",
         "sendgrid/sendgrid": "~6.0",
         "noxlogic/ratelimit-bundle": "^1.11",
-        "sensio/framework-extra-bundle": "~3.0"
+        "sensio/framework-extra-bundle": "~3.0",
+        "westonwatson/datescan": "1.0.2"
     },
     "require-dev": {
         "symfony/web-profiler-bundle": "~2.8",
