--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^1.0.1",
+    "grunt-cli": "^1.3.2",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-less": "^0.11.4",
@@ -12,5 +13,8 @@
     "grunt-remove": "^0.1.0",
     "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^1.0.0"
+  },
+  "scripts": {
+    "less": "grunt less"
   }
 }
